part-2/exercise-2.04/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dwk-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dwk-project
  template:
    metadata:
      labels:
        app: dwk-project
    spec:
      volumes:
          - name: shared-image
            persistentVolumeClaim:
              claimName: image-claim
      containers:
        - name: todo-app
          image: todo-app:2.2.0
          imagePullPolicy: Never
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/files
        - name: todo-backend
          image: todo-backend:2.2.0
          imagePullPolicy: Never
