part-2/exercise-2.04/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-material-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dwk-project-svc
            port:
              number: 7777
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: dwk-project-svc
            port:
              number: 7778
